--- a/shopusa/grails-app/i18n/messages.properties
+++ b/shopusa/grails-app/i18n/messages.properties
@@ -43,6 +43,12 @@ default.button.update.label=Update
 default.button.delete.label=Delete
 default.button.delete.confirm.message=Are you sure?
 
+shipOrder.status.label=Status
+
+shiporder.status.OPENED=Opened
+shiporder.status.PAYMENT_WAITING=Waiting payment
+shiporder.status.SHIPPED=Shipped
+
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
 typeMismatch.java.net.URL=Property {0} must be a valid URL
 typeMismatch.java.net.URI=Property {0} must be a valid URI
