--- a/trunk/shopusa/grails-app/i18n/messages.properties
+++ b/trunk/shopusa/grails-app/i18n/messages.properties
@@ -49,6 +49,12 @@ shiporder.status.OPENED=Opened
 shiporder.status.PAYMENT_WAITING=Waiting payment
 shiporder.status.SHIPPED=Shipped
 
+# User
+user.email.label=E-mail
+user.password.label=Password
+user.password2.label=Password (again)
+
+
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
 typeMismatch.java.net.URL=Property {0} must be a valid URL
 typeMismatch.java.net.URI=Property {0} must be a valid URI
