hide and renamed fields

--- a/shopusa/grails-app/i18n/messages.properties
+++ b/shopusa/grails-app/i18n/messages.properties
@@ -54,6 +54,12 @@ user.email.label=E-mail
 user.password.label=Password
 user.password2.label=Password (again)
 
+#Order
+order.new.label=Create order
+order.list.label=Order list
+#Order item
+orderItem.new.label=Add item
+orderItem.list.label=List of items
 
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
 typeMismatch.java.net.URL=Property {0} must be a valid URL
