create item submit button css

--- a/shopusa/grails-app/i18n/messages.properties
+++ b/shopusa/grails-app/i18n/messages.properties
@@ -57,10 +57,11 @@ user.password2.label=Password (again)
 #Order
 order.new.label=Create order
 order.list.label=Order list
+
 #Order item
 orderItem.new.label=Add item
 orderItem.list.label=List of items
-
+orderItem.button.create.label=Create \u00BB 
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
 typeMismatch.java.net.URL=Property {0} must be a valid URL
 typeMismatch.java.net.URI=Property {0} must be a valid URI
