change status order to 'complete'

--- a/shopusa/grails-app/i18n/messages.properties
+++ b/shopusa/grails-app/i18n/messages.properties
@@ -46,6 +46,7 @@ default.button.delete.confirm.message=Are you sure?
 shipOrder.status.label=Status
 
 shiporder.status.OPENED=Opened
+shiporder.status.COMPLETE=Complete
 shiporder.status.PAYMENT_WAITING=Waiting payment
 shiporder.status.SHIPPED=Shipped
 
