bugfix: registration error with email format wrong

--- a/shopusa/grails-app/i18n/messages.properties
+++ b/shopusa/grails-app/i18n/messages.properties
@@ -55,6 +55,9 @@ user.email.label=E-mail
 user.password.label=Password
 user.password2.label=Password (again)
 
+# Registration
+registerCommand.username.email.error=Please enter a valid email address
+
 #Order
 order.new.label=Create order
 order.list.label=Order list
