--- a/trunk/shopusa/grails-app/i18n/messages.properties
+++ b/trunk/shopusa/grails-app/i18n/messages.properties
@@ -65,7 +65,11 @@ order.list.label=Order list
 #Order item
 orderItem.new.label=Add item
 orderItem.list.label=List of items
-orderItem.button.create.label=Create \u00BB 
+orderItem.button.create.label=Create \u00BB
+orderItem.name.blank.error=Please enter order item name 
+orderItem.quantity.nullable.error=Please enter quantity 
+
+ 
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
 typeMismatch.java.net.URL=Property {0} must be a valid URL
 typeMismatch.java.net.URI=Property {0} must be a valid URI
