--- a/shopusa/grails-app/i18n/messages.properties
+++ b/shopusa/grails-app/i18n/messages.properties
@@ -69,7 +69,8 @@ orderItem.button.create.label=Create \u00BB
 orderItem.name.blank.error=Please enter order item name 
 orderItem.quantity.nullable.error=Please enter quantity 
 
- 
+orderItem.name.label=Brief description
+
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
 typeMismatch.java.net.URL=Property {0} must be a valid URL
 typeMismatch.java.net.URI=Property {0} must be a valid URI
